2005-05-17  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Bump version to 2.7.0

	* pango-types.defs (EllipsizeMode): Remove commas

	* pango.defs (get_font_description, get_ellipsize, set_ellipsize): 
	Add

2005-05-17  Johan Dahlin  <jdahlin@async.com.br>

	* ChangeLog.pre-2-6: Rename old ChangeLog
